# url-shortener

./: Cargo.toml  README.md
db/migrations/: 1639331740_short_links.down.sql  1639331740_short_links.up.sql
mini-http-server/: Cargo.toml  index.html
mini-http-server/src/: main.rs
mini-http-server/src/handler/: mod.rs
shortener-api/: Cargo.toml
shortener-api/src/: main.rs
shortener-api/src/app/controllers/: shortlink_controller.rs
shortener-api/src/app/models/: dto.rs  shortlink.rs
shortener-api/src/config/: database.rs  env.rs  routes.rs
